# CLisp

./: .gitignore  CMakeLists.txt  Semantics_debug.cpp  clisp_execption.cpp  codegen.cpp  lexer.cpp  lexer_debug.cpp  main.cpp  parser.cpp  runtime.cpp  sym_debug.cpp  symantic_debug.cpp  symantics.cpp  syntax.cpp  syntaxer.cpp  syntaxer_debug.cpp
debug_repl/: Semantics_debug.cpp  codegen_debug.cpp  lexer_debug.cpp  syntaxer_debug.cpp
include/: SymbolTable.hpp  clisp_execption.h  clisp_utility.hpp  codegen.h  lexer.h  runtime.h  stdafx.h  symantics.h  syntax.h
testcases/: run_test.sh
testcases/ill_formed/: 1.ml  2.ml  3.ml
testcases/valid_programs/: 1.ml  2.ml  3.ml  4.ml  5.ml  6.ml  7.ml
